# app-ui

./: .gitignore  Makefile  README.md  package.json  pyproject.toml  shadow-cljs.edn  tailwind.config.js
.clj-kondo/: config.edn
.clj-kondo/hooks/: ui.clj
public/: index.html
public/css/: base.css  main.css
simple-html-responsive-grid/: index.html  main.css
src/css/: main.css
src/daggerml/: cells.clj  cells.cljs  cells_test.cljs  main.cljs  ui.clj  ui.cljs
src/daggerml/app/: index.cljs  main.cljs  ui.clj  ui.cljs
src/daggerml/app/db/: routes.cljs
src/daggerml/app/dml/: control.cljs  layer.cljs  layout.cljs  nav.cljs  panel.cljs  typography.cljs
src/daggerml/app/dml/nav/: icon.cljs
src/daggerml/ui/: attributes.cljs
src/dml_ui/: cloudwatch.py  impl.py  plugin_examples.py  plugins.py  util.py
src/dml_ui/app/: impl.py  util.py
src/dml_ui/app/templates/: dag.html
src/dml_ui/templates/: dag.html  layout.html  node.html
test/nodejs/: tests.js
tests/: test_app.py
