[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dml-ui"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Aaron Niskin", email = "aaron@niskin.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

# optional dependencies
[project.optional-dependencies]
plot = [
  "matplotlib>=3.4.0",
  "seaborn>=0.11.0",
  "plotly==6.2.0",
  "altair>=5.5.0",
  "vegafusion>=2.0.2",
  "bokeh>=3.7.3",
]

[project.urls]
Documentation = "https://github.com/daggerml/dml-ui#readme"
Issues = "https://github.com/daggerml/dml-ui/issues"
Source = "https://github.com/daggerml/dml-ui"

# script entry points
[project.scripts]
dml-ui-dev = "dml_ui.app.impl:run"

[project.entry-points."dml_ui.dashboard_plugins"]
my_matplotlib_plugin = "dml_ui.plugins:MatplotlibStatsPlugin"

[tool.hatch.version]
path = "src/dml_ui/__about__.py"

[tool.hatch.envs.default]
extra-dependencies = [
  "mypy>=1.0.0",
  # github dependencies on branch: "main" with features: dml,nb,app,test
  "dml-util[dml,nb,app,test] @ git+https://github.com/daggerml/dml-util.git@simplify-tests",
]
features = ["plot"]
[tool.hatch.envs.default.scripts]
check = "mypy --install-types --non-interactive {args:src/dml_ui tests}"

[tool.coverage.run]
source_pkgs = ["dml_ui", "tests"]
branch = true
parallel = true
omit = [
  "src/dml_ui/__about__.py",
]

[tool.coverage.paths]
dml_ui = ["src/dml_ui", "*/dml-ui/src/dml_ui"]
tests = ["tests", "*/dml-ui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
